# ns-controller

./: .gitignore  INSTALL.md  QUICKSTART.md  README.md  SYSTEM_OVERVIEW.md  client.py  create-gadget.sh  diagnose.sh  example_client.py  fix-config-txt.sh  fix-service-ordering.sh  fix-usb-gadget-config.sh  fix-usb-gadget-now.sh  install.sh  macro.py  main.py  ns_controller.py  ocr.py  output.txt  press_lr_buttons.py  pyproject.toml  requirements.txt  setup-usb-gadget-manual.sh  setup.sh  slope-to-xy.py  test.py  uninstall.sh
ns_controller/: cli.py  client.py  controller.py  logging.py  macro_parser.py  ns_controller_pb2.py  ns_controller_pb2_grpc.py  protocol.py  server.py
ns_controller/macros/: example_spam_a.json  infinite_a_spam.json
ns_controller/pb/: ns_controller_pb2.py  ns_controller_pb2.pyi  ns_controller_pb2_grpc.py
ns_controller/spi_rom_data/: __init__.py
ns_shiny_hunter/: atomic.py  bot.py  frame.py  frame_grabber.py  util.py
ns_shiny_hunter/bdsp/frames/: __init__.py
ns_shiny_hunter/bdsp/scripts/ramanas_park/: script.py
ns_shiny_hunter/bdsp/scripts/ramanas_park/rayquaza/: __init__.py  baseline.json  frames.py
ns_shiny_hunter/bdsp/scripts/ramanas_park/rayquaza/frames/: __init__.py
ns_shiny_hunter/legends_za/: frames.py
ns_shiny_hunter/legends_za/scripts/bench_reset/: frames.py  script.py  state.py
ns_shiny_hunter/legends_za/scripts/fly_reset/: script.py  state.py
ns_shiny_hunter/legends_za/scripts/litwick/: frames.py  script.py
ns_shiny_hunter/legends_za/scripts/sushi_high_roller/: frames.py  script.py  state.py
ns_shiny_hunter/legends_za/scripts/wz16/: frames.py  script.py
ns_shiny_hunter/legends_za/scripts/wz20_alphas/: frames.py  script.py  state.py
ns_shiny_hunter/legends_za/scripts/wz5/: script.py
ns_shiny_hunter/legends_za/scripts/wz_fly_reset/: script.py
ns_shiny_hunter/system/: frames.py
ns_shiny_hunter/system/frames/: __init__.py
protos/: ns-controller.proto  ns_controller.proto
script/: controller.py  dump-reference-frames.py  frame-grabber.py  test.py
tests/: test_macro_parser.py
