[tool.poetry]
name = "ns-controller"
version = "0.1.0"
description = "Nintendo Switch Pro Controller emulator over USB with TCP server and Streamlit UI"
authors = ["Dylan Meadows <dylmeadows@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
click = "^8.3.0"
pydantic = "^2.12.3"
streamlit = "^1.50.0"
loguru = "^0.7.3"

[tool.poetry.scripts]
ns-controller = "ns_controller.cli:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
exclude = [".venv", "__pycache__", "build", "dist"]
line-length = 120
indent-width = 4
[tool.ruff.format]
quote-style = "double"
[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C90"]
[tool.ruff.lint.mccabe]
max-complexity = 20

